[package]
name = "ph2mapdl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.12", features = ["derive"] }
colored = "2.0.0"
dialoguer = "0.10.4"
dotenv = "0.15.0"
libc = "0.2.147"
regex = "1.8.4"
reqwest = { version = "0.11.18", features = ["blocking", "json"] }
rust-ini = "0.19.0"
serde_json = "1.0.97"
